# PyMDB

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
postgres/: imdb.sql  name.basics.sql  title.akas.sql  title.basics.sql  title.crew.sql  title.episode.sql  title.episodes.sql  title.principals.sql  title.ratings.sql
src/: imdb_interfaces.py  main.py  name.basics.sql  title.akas.sql  title.crew.sql  title.principals.sql
