[tool.poetry]
name = "pymdb"
version = "0.1.0"
description = "Small Python project for working with IMDB data"
authors = ["otherJL0 <jonathanglopez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.4"
typer = "^0.4.0"
pydantic = "^1.8.2"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.9.3"
flake8 = "^4.0.1"
pytest = "^6.2.5"
tox = "^3.24.4"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
